fixed header spacing

--- a/src/assets/scss/components/_header-kits.scss
+++ b/src/assets/scss/components/_header-kits.scss
@@ -37,7 +37,7 @@
 
 }
 .kit-details-header {
-  margin-bottom: $page-spacing;
+  margin-bottom: 3rem;
 }
 
 .kit-details-header-text {
